[package]
name = "gbc"
version = "0.1.0"
edition = "2021"

[features]
gfx = ["bevy"]
precompute = ["regex"]
headless-render = ["image"]
default = ["headless-render"]

[[bin]]
name = "precompute"
path = "src/bin/precompute.rs"
required-features = ["precompute"]

[[bin]]
name = "dis"
path = "src/bin/dis.rs"
required-features = []

[[bin]]
name = "gfx"
path = "src/bin/gfx.rs"
required-features = ["gfx"]

[[bin]]
name = "headless"
path = "src/bin/headless.rs"
required-features = []

[dependencies]
thiserror = "1.0.57"

[dependencies.image]
version = "*"
optional = true

[dependencies.regex]
version = "1.5.4"
optional = true

[dependencies.rustyline]
version = "*"

[dependencies.color-eyre]
version = "0.6.2"

[dependencies.bitfield-struct]
version = "0.6"

[dependencies.signal-hook]
version = "*"

[dependencies.bitflags]
version = "2.4.2"

[dependencies.rand]
version = "0.8.5"

[dependencies.bevy]
version = "0.12.1"
optional = true

[dev-dependencies]
serde = "1.0.196"
serde_json = "1.0.68"
