[package]
name = "gbc"
version = "0.1.0"
edition = "2021"

[features]
gfx = ["bevy", "bevy_pixels"]
precompute = ["regex"]
headless-render = ["image", "signal-hook", "rustyline"]
default = ["headless-render", "gfx"]

[[bin]]
name = "precompute"
path = "src/bin/precompute.rs"
required-features = ["precompute"]

[[bin]]
name = "dis"
path = "src/bin/dis.rs"
required-features = []

[[bin]]
name = "gfx"
path = "src/bin/gfx.rs"
required-features = ["gfx"]

[[bin]]
name = "headless"
path = "src/bin/headless.rs"
required-features = []

[dependencies]
thiserror = "1.0.57"

[dependencies.image]
version = "*"
optional = true

[dependencies.regex]
version = "1.5.4"
optional = true

[dependencies.rustyline]
version = "*"
optional = true

[dependencies.color-eyre]
version = "0.6.2"

[dependencies.bitfield-struct]
version = "0.6"

[dependencies.signal-hook]
version = "*"
optional = true

[dependencies.bitflags]
version = "2.4.2"

[dependencies.rand]
version = "0.8.5"

[dependencies.bevy]
version = "0.13.0"
default_features = false
optional = true

[dependencies.bevy_pixels]
# version = "0.12.0"
optional = true
path = "../../sandbox/bevy_pixels"

[dev-dependencies]
serde = "1.0.196"
serde_json = "1.0.68"
